--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/flux": "^3.1.8",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "eventemitter2": "^5.0.1",
+    "flux": "^3.1.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
@@ -27,9 +30,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/keymirror": "^0.1.1",
     "change-case": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "keymirror": "^0.1.1",
     "styled-components": "^4.1.3",
+    "superagent": "^4.1.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.14.0",
     "tslint-config-airbnb": "^5.11.1",
