--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/humps": "^1.1.2",
     "@types/keymirror": "^0.1.1",
     "change-case": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "humps": "^2.0.1",
     "keymirror": "^0.1.1",
     "styled-components": "^4.1.3",
     "superagent": "^4.1.0",
