--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "types": [
       "node"
     ],
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
