--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --history-api-fallback",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
