--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@types/flux": "^3.1.8",
+    "@types/lodash": "^4.14.123",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "eventemitter2": "^5.0.1",
     "flux": "^3.1.3",
+    "lodash": "^4.17.11",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-google-maps": "^9.4.5",
@@ -34,6 +36,8 @@
     "@types/googlemaps": "^3.30.19",
     "@types/humps": "^1.1.2",
     "@types/keymirror": "^0.1.1",
+    "@types/styled-components": "^4.1.12",
+    "@types/superagent": "^4.1.1",
     "change-case": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "humps": "^2.0.1",
