--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "dotenv": "^7.0.0",
     "eventemitter2": "^5.0.1",
     "flux": "^3.1.3",
     "lodash": "^4.17.11",
