--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/flux": "^3.1.8",
+    "@types/history": "^4.7.2",
     "@types/lodash": "^4.14.123",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
@@ -11,6 +12,7 @@
     "dotenv": "^7.0.0",
     "eventemitter2": "^5.0.1",
     "flux": "^3.1.3",
+    "history": "^4.9.0",
     "lodash": "^4.17.11",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
