--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/store": "^2.0.1",
     "dotenv": "^7.0.0",
     "eventemitter2": "^5.0.1",
     "flux": "^3.1.3",
@@ -18,7 +19,8 @@
     "react-dom": "^16.8.4",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "webpack-dev-server --history-api-fallback --https --open 'Google Chrome' $npm_package_config_ca",
