--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/store": "^2.0.1",
+    "axios": "^0.18.0",
     "dotenv": "^7.0.0",
     "eventemitter2": "^5.0.1",
     "flux": "^3.1.3",
@@ -45,13 +46,11 @@
     "@types/humps": "^1.1.2",
     "@types/keymirror": "^0.1.1",
     "@types/styled-components": "^4.1.12",
-    "@types/superagent": "^4.1.1",
     "change-case": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "humps": "^2.0.1",
     "keymirror": "^0.1.1",
     "styled-components": "^4.1.3",
-    "superagent": "^4.1.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.14.0",
     "tslint-config-airbnb": "^5.11.1",
