--- a/package.json
+++ b/package.json
@@ -24,13 +24,10 @@
     "store": "^2.0.12"
   },
   "scripts": {
-    "start": "webpack --watch & webpack-dev-server --history-api-fallback --https $npm_package_config_ca",
+    "start": "webpack --watch & webpack-dev-server --history-api-fallback",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "config": {
-    "ca": "--key /private/etc/ssl/certs/expwy-footprints-key.pem --cert /private/etc/ssl/certs/expwy-footprints.pem"
   },
   "eslintConfig": {
     "extends": "react-app"
