--- a/package.json
+++ b/package.json
@@ -3,25 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/flux": "^3.1.8",
-    "@types/history": "^4.7.2",
-    "@types/lodash": "^4.14.123",
-    "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.2",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/store": "^2.0.1",
     "axios": "^0.18.0",
-    "dotenv": "^7.0.0",
+    "change-case": "^3.1.0",
     "eventemitter2": "^5.0.1",
     "flux": "^3.1.3",
     "history": "^4.9.0",
+    "keymirror": "^0.1.1",
     "lodash": "^4.17.11",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-google-maps": "^9.4.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "webpack --watch & webpack-dev-server --history-api-fallback",
@@ -39,20 +33,24 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/googlemaps": "^3.30.19",
+    "@types/flux": "^3.1.8",
+    "@types/history": "^4.7.2",
     "@types/keymirror": "^0.1.1",
-    "@types/styled-components": "^4.1.12",
-    "change-case": "^3.1.0",
+    "@types/lodash": "^4.14.126",
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/store": "^2.0.1",
+    "@types/styled-components": "^4.1.15",
+    "dotenv": "^8.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "keymirror": "^0.1.1",
-    "styled-components": "^4.1.3",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.14.0",
+    "ts-loader": "^5.4.5",
+    "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-loader": "^3.5.4",
-    "typescript": "^3.3.3333",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "typescript": "^3.4.5",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
