--- a/.gitignore
+++ b/.gitignore
@@ -9,21 +9,14 @@
 /coverage
 
 # production
-/build
+/dist
+
+# secret
+.env
+.env.*
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# environment variables
-.env
-
-# precompiled files
-/dist
