--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "styled-components": "^4.2.0"
   },
   "scripts": {
-    "start": "webpack --watch & webpack-dev-server --history-api-fallback",
-    "build": "react-scripts build",
+    "start": "webpack --config webpack.config.dev.js --watch & webpack-dev-server --config webpack.config.dev.js --history-api-fallback",
+    "build": "webpack --config webpack.config.prd.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,6 +50,7 @@
     "typescript": "^3.4.5",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   }
 }
